fix: dockerfile, doc generation
