# internal/controller/auth_controller.go
@@ -32,8 +32,8 @@ func NewAuthController(db *gorm.DB) AuthController {
 // Register godoc
 // @Summary Register new user
 // @Tags auth
-// @Param request body RegisterDto true "RegisterDto"
-// @Success 201	{array} LoginResponse
+// @Param request body dto.RegisterDto true "RegisterDto"
+// @Success 201	{array} dto.LoginResponse
 // @Failure 400 {object} utils.HttpError
 // @Failure 500 {object} utils.HttpError
 // @Router /auth/register [post]
@@ -56,8 +56,8 @@ func (a *authController) Register(c *gin.Context) {
 // Login godoc
 // @Summary Login user
 // @Tags auth
-// @Param request body LoginDto true "LoginDto"
-// @Success 201	{array} LoginResponse
+// @Param request body dto.LoginDto true "LoginDto"
+// @Success 201	{array} dto.LoginResponse
 // @Failure 400 {object} utils.HttpError
 // @Failure 401 {object} utils.HttpError
 // @Failure 404 {object} utils.HttpError
